# rust-nrf52840-dev

./: Cargo.toml  README.md
src/: lib.rs
src/pac/: consts.rs  macros.rs  mod.rs
src/pac/peripheral/: gpiote.rs  mod.rs  p0.rs  p1.rs
src/pac/peripheral/p0/: enums.rs  mod.rs  registers.rs
src/pac/peripherals/: mod.rs
src/pac/peripherals/p0/: enums.rs  mod.rs  registers.rs
src/pac/peripherals/p1/: enums.rs  mod.rs  registers.rs
